--- a/G4-TaskManager/G4-TaskManager/G4-TaskManager.csproj
+++ b/G4-TaskManager/G4-TaskManager/G4-TaskManager.csproj
@@ -10,69 +10,78 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Iconos\agregar-usuario.png" />
-    <None Remove="Iconos\ajustes.png" />
-    <None Remove="Iconos\borrar-usuario.png" />
-    <None Remove="Iconos\buscar-usuario.png" />
-    <None Remove="Iconos\cancelar.png" />
-    <None Remove="Iconos\candado.png" />
-    <None Remove="Iconos\confirmar.png" />
-    <None Remove="Iconos\editar-usuario.png" />
-    <None Remove="Iconos\entrar.png" />
-    <None Remove="Iconos\filtrar.png" />
-    <None Remove="Iconos\guardar.png" />
-    <None Remove="Iconos\historial.png" />
-    <None Remove="Iconos\home.png" />
-    <None Remove="Iconos\login.png" />
-    <None Remove="Iconos\salir.png" />
+    <None Remove="Resources\Fondos\login.jpg" />
+    <None Remove="Resources\Iconos\agregar-usuario.png" />
+    <None Remove="Resources\Iconos\ajustes.png" />
+    <None Remove="Resources\Iconos\borrar-usuario.png" />
+    <None Remove="Resources\Iconos\buscar-usuario.png" />
+    <None Remove="Resources\Iconos\cancelar.png" />
+    <None Remove="Resources\Iconos\candado.png" />
+    <None Remove="Resources\Iconos\confirmar.png" />
+    <None Remove="Resources\Iconos\editar-usuario.png" />
+    <None Remove="Resources\Iconos\entrar.png" />
+    <None Remove="Resources\Iconos\filtrar.png" />
+    <None Remove="Resources\Iconos\guardar.png" />
+    <None Remove="Resources\Iconos\historial.png" />
+    <None Remove="Resources\Iconos\home.png" />
+    <None Remove="Resources\Iconos\login.png" />
+    <None Remove="Resources\Iconos\salir.png" />
+    <None Remove="Resources\Login.jpg" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Iconos\agregar-usuario.png">
+    <Resource Include="Resources\Fondos\login.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\ajustes.png">
+    <Resource Include="Resources\Iconos\agregar-usuario.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\borrar-usuario.png">
+    <Resource Include="Resources\Iconos\ajustes.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\buscar-usuario.png">
+    <Resource Include="Resources\Iconos\borrar-usuario.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\cancelar.png">
+    <Resource Include="Resources\Iconos\buscar-usuario.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\candado.png">
+    <Resource Include="Resources\Iconos\cancelar.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\confirmar.png">
+    <Resource Include="Resources\Iconos\candado.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\editar-usuario.png">
+    <Resource Include="Resources\Iconos\confirmar.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\entrar.png">
+    <Resource Include="Resources\Iconos\editar-usuario.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\filtrar.png">
+    <Resource Include="Resources\Iconos\entrar.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\guardar.png">
+    <Resource Include="Resources\Iconos\filtrar.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\historial.png">
+    <Resource Include="Resources\Iconos\guardar.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\home.png">
+    <Resource Include="Resources\Iconos\historial.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\login.png">
+    <Resource Include="Resources\Iconos\home.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Iconos\salir.png">
+    <Resource Include="Resources\Iconos\login.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\Iconos\salir.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
