--- a/G4-EmployeeRegisterSol/G4-EmployeeRegister/G4-EmployeeRegister.csproj
+++ b/G4-EmployeeRegisterSol/G4-EmployeeRegister/G4-EmployeeRegister.csproj
@@ -30,6 +30,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
 
